# DIOPI

./: .clang-format  .clang-format-ignore  .clang-tidy  .git_commit_template  .gitignore  .gitmodules  .pre-commit-config.yaml  CODEOWNERS  Contributors.md  FAQ.md  README.md  pull_request_template.md  run-clang-tidy.py
DIOPI-IMPL/: .clang-format  AUTHORS.md  CMakeLists.txt  Contributors.md  LICENSE  README.md
DIOPI-IMPL/.github/workflows/: main.yml
DIOPI-IMPL/ascend/: CMakeLists.txt  conform_test.cpp  error.hpp
DIOPI-IMPL/ascend/common/: acloprunner.cpp  acloprunner.hpp
DIOPI-IMPL/ascend/functions/: binary_op.cpp  conv_2d.cpp  error.cpp  fill.cpp
DIOPI-IMPL/ascend/test/: CMakeLists.txt  conform_test.cpp
DIOPI-IMPL/camb/: CMakeLists.txt  cnnl_helper.cpp  cnnl_helper.hpp  conform_test.cpp  convert_config.yaml  device_configs.py  diopi_helper.hpp  error.hpp  functions.cpp  helper.hpp  mlu_helper.hpp
DIOPI-IMPL/camb/common/: basic_op.cpp  broadcast.cpp  clone.cpp  common.hpp  contiguous.cpp  debug.cpp  debug.hpp  dtype_cast.cpp  float16.hpp  scalar.cpp  transpose.cpp
DIOPI-IMPL/camb/functions/: abs.cpp  activation.cpp  adaptive_pooling.cpp  addcdiv.cpp  addcmul.cpp  addmm.cpp  arange.cpp  avg_pool2d.cpp  baddbmm.cpp  batch_norm.cpp  bce_loss.cpp  bce_with_logits.cpp  binary_op.cpp  bitwise.cpp  cast_dtype.cpp  cat.cpp  cdist.cpp  clamp.cpp  conv_2d.cpp  copy.cpp  cos.cpp  ctc_loss.cpp  cumsum.cpp  div.cpp  dropout.cpp  embedding.cpp  erf.cpp  erfinv.cpp  error.cpp  exp.cpp  expand.cpp  fill.cpp  flip.cpp  floor.cpp  gather.cpp  hardtanh.cpp  im2col.cpp  index.cpp  index_put.cpp  info.cpp  (+56 more)
DIOPI-IMPL/camb/functions_mmcv/: bbox_overlaps_mlu.cpp  bbox_overlaps_mlu_kernel.mlu  common_mlu_helper.hpp  focal_loss_sigmoid_mlu.cpp  focal_loss_sigmoid_mlu_kernel.mlu  nms_mlu.cpp  nms_mlu_kernel.mlu  nms_utils.hpp  roi_align_mlu.cpp  roi_align_mlu_kernel.mlu  voxelization_mlu.cpp  voxelization_mlu_kernel.mlu
DIOPI-IMPL/camb/test/: CMakeLists.txt  conform_test.cpp
DIOPI-IMPL/camb_pytorch/: CMakeLists.txt  aten_helper.hpp  conform_test.cpp  error.cpp  error.hpp  functions.cpp
DIOPI-IMPL/camb_pytorch/test/: CMakeLists.txt  conform_test.cpp  export_runtime.cpp
DIOPI-IMPL/cuda/: CMakeLists.txt  conform_test.cpp  error.cpp  functions.cpp  functions.cu  helper.hpp
DIOPI-IMPL/cuda/functions_mmcv/: active_rotated_filter.cu  assign_score_withk.cu
DIOPI-IMPL/cuda/test/: CMakeLists.txt  conform_test.cpp  litert.cpp
DIOPI-IMPL/scripts/: build_impl.sh  ci_script.sh
DIOPI-IMPL/supa/: CMakeLists.txt
DIOPI-IMPL/supa/functions/: abs.cpp
DIOPI-IMPL/supa/test/: CMakeLists.txt  conform_test.cpp
DIOPI-IMPL/topsrider/: CMakeLists.txt  LICENSE  README.md  conform_test.cpp  error.cpp  error.h  functions.cpp  helper.hpp
DIOPI-IMPL/topsrider/cmake/: FindTOPSDNN.cmake  FindTOPSRT.cmake
DIOPI-IMPL/torch/: CMakeLists.txt  code_gen.py  conform_test.cpp  context.h  cuda_helpers.h  error.cpp  error.hpp  functions.cpp  functions_mmcv.cpp  helper.hpp  mmcv_kernel.h  nms_kernel.cu  readme.md  roi_align_kernel.cu  vision_kernel.h  wrap_func.cpp
DIOPI-IMPL/torch/functions_mmcv/: focal_loss.cu  modulated_deform_conv.cu  nms.cu  roi_align.cu  voxelization.cu
DIOPI-IMPL/torch/test/: CMakeLists.txt  conform_test.cpp  diopi_functions.cpp
DIOPI-TEST/: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CODE_OF_CONDUCT.md  LICENSE  README.md
DIOPI-TEST/.github/workflows/: docker.yml  main.yml
DIOPI-TEST/codegen/: gen.py  op_template.py
DIOPI-TEST/csrc/: ascend_torch_conform_test.cpp  camb_conform_test.cpp  camb_torch_conform_test.cpp  cuda_conform_test.cpp  diopi_functions.cpp  export_runtime.cpp  litert.c  litert.cpp  litert.hpp  torch_conform_test.cpp
DIOPI-TEST/impl/cuda/: CMakeLists.txt  conform_test.cpp  functions.cpp  functions.cu  helper.hpp
DIOPI-TEST/impl/torch/: CMakeLists.txt  conform_test.cpp  cuda_helpers.h  error.cpp  functions.cpp  helper.hpp  (+1 more)
DIOPI-TEST/include/: conform_test.h  diopi_register.h  litert.hpp
DIOPI-TEST/python/: main.py
DIOPI-TEST/scripts/: build_impl.sh  build_mmcv.sh  build_test.sh  ci_script.sh  cpplint.py  test_mmcv_ext.sh
impl/: CMakeLists.txt  README.md  log.txt
impl/ascend/: CMakeLists.txt  ascend_tensor.cpp  ascend_tensor.hpp  convert_config.yaml  device_configs.py  device_configs.py.bk  env_vars.cpp  env_vars.hpp  error.hpp  init.cpp  macro.hpp
impl/ascend_npu/: .clang-format-ignore  CMakeLists.txt  ascend_config.yaml  device_configs.py
impl/camb/: CMakeLists.txt  SynBatchNorm.cpp  cnnl_helper.cpp  cnnl_helper.hpp  convert_config.yaml  device_configs.py  diopi_helper.cpp  diopi_helper.hpp  env_vars.cpp  env_vars.hpp  error.hpp  init.cpp  mlu_helper.hpp  mlu_ops_helper.cpp  mlu_ops_helper.hpp
impl/camb_pytorch/: CMakeLists.txt  aten_helper.hpp  error.cpp  error.hpp  functions.cpp
impl/cmake/: AdapterHelper.cmake  ImplHelper.cmake  LoadHIP.cmake  TorchBaseFunc.cmake
impl/cuda/: CMakeLists.txt  cuda_helper.hpp  device_configs.py  error.cpp  error.hpp  functions.cpp  functions.cu  helper.hpp
impl/droplet/: CMakeLists.txt  convert_config.yaml  device_configs.py
impl/kunlunxin/: CMakeLists.txt  convert_config.yaml  device_configs.py  error.hpp
impl/muxi/: CMakeLists.txt  convert_config.yaml  device_configs.py
impl/proto/: include
impl/scripts/: build_impl.sh  ci_script.sh  pick_card.sh
impl/supa/: CMakeLists.txt  README.md  device_configs.py
impl/topsrider/: .clang-format  CMakeLists.txt  conform_test.cpp  convert_config.yaml  device_configs.py  diopi_configs.py  functions.cpp  log.h  ops.h
impl/torch/: CMakeLists.txt  build_aten.cpp  build_aten.hpp  code_gen.py  context.h  convert_config.yaml  cuda_helpers.h  device_configs.py  diopi.map  diopi_triton_kernels.fatbin  dyload_handler.sh  error.cpp  error.hpp  ext_kernel.h  functions.cpp  functions_ext.cpp  functions_lightllm.cpp  functions_lmdeploy.cpp  functions_mmcv.cpp  gen_triton_kernel_fatbin.sh  get_cuda_arch.py  helper.cpp  helper.hpp  hipify-amend.sh  lmdeploy_kernel.h  mmcv_kernel.h  readme.md  roi_align_kernel.cu  sparse_kernel.h  vision_kernel.h
(+1019 files in other folders)
